rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/dot_super.rns
; comment before the directive
.super java/lang/Object
.class public HelloWorld
.super java/lang/Object
